--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!--------
      stylesheet
     -------- -->
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <!-- header start -->
@@ -26,27 +26,27 @@
           <h2 class="section-title">Top Players</h2>
           <div class="players">
             <div class="player">
-              <img src="../images/players/player-1.png" alt="" />
+              <img src="./images/players/player-1.png" alt="" />
               <h3 class="player-name">Top Player-1</h3>
             </div>
             <div class="player">
-              <img src="../images/players/player-2.png" alt="" />
+              <img src="./images/players/player-2.png" alt="" />
               <h3 class="player-name">Top Player-2</h3>
             </div>
             <div class="player">
-              <img src="../images/players/player-3.png" alt="" />
+              <img src="./images/players/player-3.png" alt="" />
               <h3 class="player-name">Top Player-3</h3>
             </div>
             <div class="player">
-              <img src="../images/players/player-4.png" alt="" />
+              <img src="./images/players/player-4.png" alt="" />
               <h3 class="player-name">Top Player-4</h3>
             </div>
             <div class="player">
-              <img src="../images/players/player-5.png" alt="" />
+              <img src="./images/players/player-5.png" alt="" />
               <h3 class="player-name">Top Player-5</h3>
             </div>
             <div class="player">
-              <img src="../images/players/player-6.png" alt="" />
+              <img src="./images/players/player-6.png" alt="" />
               <h3 class="player-name">Top Player-6</h3>
             </div>
           </div>
@@ -57,7 +57,7 @@
           <div class="blogs">
             <article class="blog">
               <div class="thumbnail">
-                <img src="../images/blogs/blog-1.png" alt="" />
+                <img src="./images/blogs/blog-1.png" alt="" />
               </div>
               <div class="blog-info">
                 <h3 class="blog-title">13 of My Favorite UI/UX Goodies</h3>
@@ -66,7 +66,7 @@
             </article>
             <article class="blog">
               <div class="thumbnail">
-                <img src="../images/blogs/blog-2.png" alt="" />
+                <img src="./images/blogs/blog-2.png" alt="" />
               </div>
               <div class="blog-info">
                 <h3 class="blog-title">13 of My Favorite UI/UX Goodies</h3>
@@ -75,7 +75,7 @@
             </article>
             <article class="blog">
               <div class="thumbnail">
-                <img src="../images/blogs/blog-3.png" alt="" />
+                <img src="./images/blogs/blog-3.png" alt="" />
               </div>
               <div class="blog-info">
                 <h3 class="blog-title">13 of My Favorite UI/UX Goodies</h3>
@@ -84,7 +84,7 @@
             </article>
             <article class="blog">
               <div class="thumbnail">
-                <img src="../images/blogs/blog-4.png" alt="" />
+                <img src="./images/blogs/blog-4.png" alt="" />
               </div>
               <div class="blog-info">
                 <h3 class="blog-title">13 of My Favorite UI/UX Goodies</h3>
@@ -100,7 +100,7 @@
         <div class="courses">
           <div class="course">
             <div class="course-banner">
-              <img src="../images/courses/course-1.png" alt="" />
+              <img src="./images/courses/course-1.png" alt="" />
             </div>
             <div class="course-detail">
               <h3 class="course-title">React - The Complete Guide 2022</h3>
@@ -123,7 +123,7 @@
           </div>
           <div class="course">
             <div class="course-banner">
-              <img src="../images/courses/course-2.png" alt="" />
+              <img src="./images/courses/course-2.png" alt="" />
             </div>
             <div class="course-detail">
               <h3 class="course-title">React - The Complete Guide 2022</h3>
@@ -146,7 +146,7 @@
           </div>
           <div class="course">
             <div class="course-banner">
-              <img src="../images/courses/course-3.png" alt="" />
+              <img src="./images/courses/course-3.png" alt="" />
             </div>
             <div class="course-detail">
               <h3 class="course-title">React - The Complete Guide 2022</h3>
